--- a/circularimageview-example/src/main/res/values/strings.xml
+++ b/circularimageview-example/src/main/res/values/strings.xml
@@ -1,11 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- APP DEFAULT -->
     <string name="app_name">CircularImageView</string>
-
-    <!-- OTHER -->
-    <string name="show_on_github">Show on GitHub</string>
-    <string name="pay_me_a_beer">Pay me a beer</string>
-    <string name="offer_me_a_beer">Offer me a beer to reward me if that application have helped you.</string>
-
 </resources>
